fix(Accessibility): focus is not visible when the high contrast mode is enabled. (#306)

--- a/coral-component-tablist/src/styles/skin.styl
+++ b/coral-component-tablist/src/styles/skin.styl
@@ -18,3 +18,9 @@
   }
 
 }
+
+@media (forced-colors: active) {
+  ._coral-Tabs-item.is-selected {
+    border: 1px solid;
+  }
+}
